[project]
name = "arcanum-pw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.50.0",
    "pypdf2>=3.0.1",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "pypdf>=5.3.0",
    "unidecode>=1.3.8",
    "loguru>=0.7.3",
    "aiofiles>=24.1.0",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "checksumdir>=1.2.0",
    "setuptools>=75.8.0",
    "xxhash>=3.5.0",
    "pypushover",
    "dropbox>=12.0.2",
]
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
pypushover = { git = "https://github.com/MarcellGranat/pypushover" }
